// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable selection -- radio buttons should not have select-all checkbox 1`] = `
<DataTable
  filterRows={[Function]}
  headers={
    Array [
      Object {
        "header": "Field A",
        "key": "fieldA",
      },
      Object {
        "header": "Field B",
        "key": "fieldB",
      },
    ]
  }
  locale="en"
  radio={true}
  render={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "expandRow": [Function],
            "getBatchActionProps": [Function],
            "getHeaderProps": [Function],
            "getRowProps": [Function],
            "getSelectionProps": [Function],
            "getTableProps": [Function],
            "headers": Array [
              Object {
                "header": "Field A",
                "key": "fieldA",
              },
              Object {
                "header": "Field B",
                "key": "fieldB",
              },
            ],
            "onInputChange": [Function],
            "radio": true,
            "rows": Array [],
            "selectAll": [Function],
            "selectRow": [Function],
            "selectedRows": Array [],
            "sortBy": [Function],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": <TableContainer
            title="DataTable with selection"
          >
            <Table
              short={false}
              shouldShowBorder={true}
              zebra={true}
            >
              <TableHead>
                <TableRow>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field A
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field B
                  </TableHeader>
                </TableRow>
              </TableHead>
              <TableBody />
            </Table>
          </TableContainer>,
        },
      ],
    }
  }
  rows={Array []}
  short={false}
  shouldShowBorder={true}
  sortRow={[Function]}
  translateWithId={[Function]}
>
  <TableContainer
    title="DataTable with selection"
  >
    <div
      className="bx--data-table-v2-container"
    >
      <h4
        className="bx--data-table-v2-header"
      >
        DataTable with selection
      </h4>
      <Table
        short={false}
        shouldShowBorder={true}
        zebra={true}
      >
        <table
          className="bx--data-table-v2 bx--data-table-v2--zebra"
        >
          <TableHead>
            <thead>
              <TableRow>
                <tr>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldA"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      aria-sort="none"
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field A
                        </span>
                        <CaretUpGlyph
                          aria-label="Sort rows by this header in ascending order"
                          className="bx--table-sort-v2__icon"
                          height={4}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 8 4"
                          width={8}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-label="Sort rows by this header in ascending order"
                            className="bx--table-sort-v2__icon"
                            focusable="false"
                            height={4}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            style={
                              Object {
                                "willChange": "transform",
                              }
                            }
                            viewBox="0 0 8 4"
                            width={8}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 4l4-4 4 4z"
                            />
                          </svg>
                        </CaretUpGlyph>
                      </button>
                    </th>
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldB"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      aria-sort="none"
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field B
                        </span>
                        <CaretUpGlyph
                          aria-label="Sort rows by this header in ascending order"
                          className="bx--table-sort-v2__icon"
                          height={4}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 8 4"
                          width={8}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-label="Sort rows by this header in ascending order"
                            className="bx--table-sort-v2__icon"
                            focusable="false"
                            height={4}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            style={
                              Object {
                                "willChange": "transform",
                              }
                            }
                            viewBox="0 0 8 4"
                            width={8}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 4l4-4 4 4z"
                            />
                          </svg>
                        </CaretUpGlyph>
                      </button>
                    </th>
                  </TableHeader>
                </tr>
              </TableRow>
            </thead>
          </TableHead>
          <TableBody>
            <tbody />
          </TableBody>
        </table>
      </Table>
    </div>
  </TableContainer>
</DataTable>
`;

exports[`DataTable selection -- radio buttons should render 1`] = `
<DataTable
  filterRows={[Function]}
  headers={
    Array [
      Object {
        "header": "Field A",
        "key": "fieldA",
      },
      Object {
        "header": "Field B",
        "key": "fieldB",
      },
    ]
  }
  locale="en"
  radio={true}
  render={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "expandRow": [Function],
            "getBatchActionProps": [Function],
            "getHeaderProps": [Function],
            "getRowProps": [Function],
            "getSelectionProps": [Function],
            "getTableProps": [Function],
            "headers": Array [
              Object {
                "header": "Field A",
                "key": "fieldA",
              },
              Object {
                "header": "Field B",
                "key": "fieldB",
              },
            ],
            "onInputChange": [Function],
            "radio": true,
            "rows": Array [
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "b:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:A",
                  },
                  Object {
                    "errors": null,
                    "id": "b:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:B",
                  },
                ],
                "id": "b",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "a:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:A",
                  },
                  Object {
                    "errors": null,
                    "id": "a:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:B",
                  },
                ],
                "id": "a",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "c:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:A",
                  },
                  Object {
                    "errors": null,
                    "id": "c:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:B",
                  },
                ],
                "id": "c",
                "isExpanded": false,
                "isSelected": false,
              },
            ],
            "selectAll": [Function],
            "selectRow": [Function],
            "selectedRows": Array [],
            "sortBy": [Function],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": <TableContainer
            title="DataTable with selection"
          >
            <Table
              short={false}
              shouldShowBorder={true}
              zebra={true}
            >
              <TableHead>
                <TableRow>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field A
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field B
                  </TableHeader>
                </TableRow>
              </TableHead>
              <TableBody>
                <TableRow>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-11__select-row-b"
                    name="select-row-b"
                    onSelect={[Function]}
                    radio={true}
                  />
                  <TableCell>
                    Field 2:A
                  </TableCell>
                  <TableCell>
                    Field 2:B
                  </TableCell>
                </TableRow>
                <TableRow>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-11__select-row-a"
                    name="select-row-a"
                    onSelect={[Function]}
                    radio={true}
                  />
                  <TableCell>
                    Field 1:A
                  </TableCell>
                  <TableCell>
                    Field 1:B
                  </TableCell>
                </TableRow>
                <TableRow>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-11__select-row-c"
                    name="select-row-c"
                    onSelect={[Function]}
                    radio={true}
                  />
                  <TableCell>
                    Field 3:A
                  </TableCell>
                  <TableCell>
                    Field 3:B
                  </TableCell>
                </TableRow>
              </TableBody>
            </Table>
          </TableContainer>,
        },
      ],
    }
  }
  rows={
    Array [
      Object {
        "fieldA": "Field 2:A",
        "fieldB": "Field 2:B",
        "id": "b",
      },
      Object {
        "fieldA": "Field 1:A",
        "fieldB": "Field 1:B",
        "id": "a",
      },
      Object {
        "fieldA": "Field 3:A",
        "fieldB": "Field 3:B",
        "id": "c",
      },
    ]
  }
  short={false}
  shouldShowBorder={true}
  sortRow={[Function]}
  translateWithId={[Function]}
>
  <TableContainer
    title="DataTable with selection"
  >
    <div
      className="bx--data-table-v2-container"
    >
      <h4
        className="bx--data-table-v2-header"
      >
        DataTable with selection
      </h4>
      <Table
        short={false}
        shouldShowBorder={true}
        zebra={true}
      >
        <table
          className="bx--data-table-v2 bx--data-table-v2--zebra"
        >
          <TableHead>
            <thead>
              <TableRow>
                <tr>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldA"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      aria-sort="none"
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field A
                        </span>
                        <CaretUpGlyph
                          aria-label="Sort rows by this header in ascending order"
                          className="bx--table-sort-v2__icon"
                          height={4}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 8 4"
                          width={8}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-label="Sort rows by this header in ascending order"
                            className="bx--table-sort-v2__icon"
                            focusable="false"
                            height={4}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            style={
                              Object {
                                "willChange": "transform",
                              }
                            }
                            viewBox="0 0 8 4"
                            width={8}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 4l4-4 4 4z"
                            />
                          </svg>
                        </CaretUpGlyph>
                      </button>
                    </th>
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldB"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      aria-sort="none"
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field B
                        </span>
                        <CaretUpGlyph
                          aria-label="Sort rows by this header in ascending order"
                          className="bx--table-sort-v2__icon"
                          height={4}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 8 4"
                          width={8}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-label="Sort rows by this header in ascending order"
                            className="bx--table-sort-v2__icon"
                            focusable="false"
                            height={4}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            style={
                              Object {
                                "willChange": "transform",
                              }
                            }
                            viewBox="0 0 8 4"
                            width={8}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 4l4-4 4 4z"
                            />
                          </svg>
                        </CaretUpGlyph>
                      </button>
                    </th>
                  </TableHeader>
                </tr>
              </TableRow>
            </thead>
          </TableHead>
          <TableBody>
            <tbody>
              <TableRow
                key="b"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-11__select-row-b"
                    name="select-row-b"
                    onSelect={[Function]}
                    radio={true}
                  >
                    <td>
                      <ForwardRef(RadioButton)
                        checked={false}
                        hideLabel={true}
                        id="data-table-11__select-row-b"
                        labelText="Select row"
                        name="select-row-b"
                        onClick={[Function]}
                      >
                        <RadioButton
                          checked={false}
                          hideLabel={true}
                          id="data-table-11__select-row-b"
                          innerRef={null}
                          labelPosition="right"
                          labelText="Select row"
                          name="select-row-b"
                          onChange={[Function]}
                          onClick={[Function]}
                          value=""
                        >
                          <div
                            className="bx--radio-button-wrapper"
                          >
                            <input
                              checked={false}
                              className="bx--radio-button"
                              id="data-table-11__select-row-b"
                              name="select-row-b"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="radio"
                              value=""
                            />
                            <label
                              aria-label="Select row"
                              className="bx--radio-button__label"
                              htmlFor="data-table-11__select-row-b"
                            >
                              <span
                                className="bx--radio-button__appearance"
                              />
                              <span
                                className="bx--visually-hidden"
                              >
                                Select row
                              </span>
                            </label>
                          </div>
                        </RadioButton>
                      </ForwardRef(RadioButton)>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="b:fieldA"
                  >
                    <td>
                      Field 2:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="b:fieldB"
                  >
                    <td>
                      Field 2:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="a"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-11__select-row-a"
                    name="select-row-a"
                    onSelect={[Function]}
                    radio={true}
                  >
                    <td>
                      <ForwardRef(RadioButton)
                        checked={false}
                        hideLabel={true}
                        id="data-table-11__select-row-a"
                        labelText="Select row"
                        name="select-row-a"
                        onClick={[Function]}
                      >
                        <RadioButton
                          checked={false}
                          hideLabel={true}
                          id="data-table-11__select-row-a"
                          innerRef={null}
                          labelPosition="right"
                          labelText="Select row"
                          name="select-row-a"
                          onChange={[Function]}
                          onClick={[Function]}
                          value=""
                        >
                          <div
                            className="bx--radio-button-wrapper"
                          >
                            <input
                              checked={false}
                              className="bx--radio-button"
                              id="data-table-11__select-row-a"
                              name="select-row-a"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="radio"
                              value=""
                            />
                            <label
                              aria-label="Select row"
                              className="bx--radio-button__label"
                              htmlFor="data-table-11__select-row-a"
                            >
                              <span
                                className="bx--radio-button__appearance"
                              />
                              <span
                                className="bx--visually-hidden"
                              >
                                Select row
                              </span>
                            </label>
                          </div>
                        </RadioButton>
                      </ForwardRef(RadioButton)>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="a:fieldA"
                  >
                    <td>
                      Field 1:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="a:fieldB"
                  >
                    <td>
                      Field 1:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="c"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-11__select-row-c"
                    name="select-row-c"
                    onSelect={[Function]}
                    radio={true}
                  >
                    <td>
                      <ForwardRef(RadioButton)
                        checked={false}
                        hideLabel={true}
                        id="data-table-11__select-row-c"
                        labelText="Select row"
                        name="select-row-c"
                        onClick={[Function]}
                      >
                        <RadioButton
                          checked={false}
                          hideLabel={true}
                          id="data-table-11__select-row-c"
                          innerRef={null}
                          labelPosition="right"
                          labelText="Select row"
                          name="select-row-c"
                          onChange={[Function]}
                          onClick={[Function]}
                          value=""
                        >
                          <div
                            className="bx--radio-button-wrapper"
                          >
                            <input
                              checked={false}
                              className="bx--radio-button"
                              id="data-table-11__select-row-c"
                              name="select-row-c"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="radio"
                              value=""
                            />
                            <label
                              aria-label="Select row"
                              className="bx--radio-button__label"
                              htmlFor="data-table-11__select-row-c"
                            >
                              <span
                                className="bx--radio-button__appearance"
                              />
                              <span
                                className="bx--visually-hidden"
                              >
                                Select row
                              </span>
                            </label>
                          </div>
                        </RadioButton>
                      </ForwardRef(RadioButton)>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="c:fieldA"
                  >
                    <td>
                      Field 3:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="c:fieldB"
                  >
                    <td>
                      Field 3:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
            </tbody>
          </TableBody>
        </table>
      </Table>
    </div>
  </TableContainer>
</DataTable>
`;

exports[`DataTable selection should have select-all default to un-checked if no rows are present 1`] = `
<DataTable
  filterRows={[Function]}
  headers={
    Array [
      Object {
        "header": "Field A",
        "key": "fieldA",
      },
      Object {
        "header": "Field B",
        "key": "fieldB",
      },
    ]
  }
  locale="en"
  render={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "expandRow": [Function],
            "getBatchActionProps": [Function],
            "getHeaderProps": [Function],
            "getRowProps": [Function],
            "getSelectionProps": [Function],
            "getTableProps": [Function],
            "headers": Array [
              Object {
                "header": "Field A",
                "key": "fieldA",
              },
              Object {
                "header": "Field B",
                "key": "fieldB",
              },
            ],
            "onInputChange": [Function],
            "radio": undefined,
            "rows": Array [],
            "selectAll": [Function],
            "selectRow": [Function],
            "selectedRows": Array [],
            "sortBy": [Function],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": <TableContainer
            title="DataTable with selection"
          >
            <Table
              short={false}
              shouldShowBorder={true}
              zebra={true}
            >
              <TableHead>
                <TableRow>
                  <TableSelectAll
                    ariaLabel="Select all rows"
                    checked={false}
                    id="data-table-7__select-all"
                    indeterminate={false}
                    name="select-all"
                    onSelect={[Function]}
                  />
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field A
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field B
                  </TableHeader>
                </TableRow>
              </TableHead>
              <TableBody />
            </Table>
          </TableContainer>,
        },
      ],
    }
  }
  rows={Array []}
  short={false}
  shouldShowBorder={true}
  sortRow={[Function]}
  translateWithId={[Function]}
>
  <TableContainer
    title="DataTable with selection"
  >
    <div
      className="bx--data-table-v2-container"
    >
      <h4
        className="bx--data-table-v2-header"
      >
        DataTable with selection
      </h4>
      <Table
        short={false}
        shouldShowBorder={true}
        zebra={true}
      >
        <table
          className="bx--data-table-v2 bx--data-table-v2--zebra"
        >
          <TableHead>
            <thead>
              <TableRow>
                <tr>
                  <TableSelectAll
                    ariaLabel="Select all rows"
                    checked={false}
                    id="data-table-7__select-all"
                    indeterminate={false}
                    name="select-all"
                    onSelect={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <ForwardRef(InlineCheckbox)
                        ariaLabel="Select all rows"
                        checked={false}
                        id="data-table-7__select-all"
                        indeterminate={false}
                        name="select-all"
                        onClick={[Function]}
                      >
                        <InlineCheckbox
                          ariaLabel="Select all rows"
                          checked={false}
                          id="data-table-7__select-all"
                          indeterminate={false}
                          innerRef={null}
                          name="select-all"
                          onChange={[Function]}
                          onClick={[Function]}
                        >
                          <input
                            checked={false}
                            className="bx--checkbox"
                            id="data-table-7__select-all"
                            name="select-all"
                            onChange={[Function]}
                            onClick={[Function]}
                            type="checkbox"
                          />
                          <label
                            aria-label="Select all rows"
                            className="bx--checkbox-label"
                            htmlFor="data-table-7__select-all"
                          />
                        </InlineCheckbox>
                      </ForwardRef(InlineCheckbox)>
                    </th>
                  </TableSelectAll>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldA"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      aria-sort="none"
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field A
                        </span>
                        <CaretUpGlyph
                          aria-label="Sort rows by this header in ascending order"
                          className="bx--table-sort-v2__icon"
                          height={4}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 8 4"
                          width={8}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-label="Sort rows by this header in ascending order"
                            className="bx--table-sort-v2__icon"
                            focusable="false"
                            height={4}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            style={
                              Object {
                                "willChange": "transform",
                              }
                            }
                            viewBox="0 0 8 4"
                            width={8}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 4l4-4 4 4z"
                            />
                          </svg>
                        </CaretUpGlyph>
                      </button>
                    </th>
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldB"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      aria-sort="none"
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field B
                        </span>
                        <CaretUpGlyph
                          aria-label="Sort rows by this header in ascending order"
                          className="bx--table-sort-v2__icon"
                          height={4}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 8 4"
                          width={8}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-label="Sort rows by this header in ascending order"
                            className="bx--table-sort-v2__icon"
                            focusable="false"
                            height={4}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            style={
                              Object {
                                "willChange": "transform",
                              }
                            }
                            viewBox="0 0 8 4"
                            width={8}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 4l4-4 4 4z"
                            />
                          </svg>
                        </CaretUpGlyph>
                      </button>
                    </th>
                  </TableHeader>
                </tr>
              </TableRow>
            </thead>
          </TableHead>
          <TableBody>
            <tbody />
          </TableBody>
        </table>
      </Table>
    </div>
  </TableContainer>
</DataTable>
`;

exports[`DataTable selection should render 1`] = `
<DataTable
  filterRows={[Function]}
  headers={
    Array [
      Object {
        "header": "Field A",
        "key": "fieldA",
      },
      Object {
        "header": "Field B",
        "key": "fieldB",
      },
    ]
  }
  locale="en"
  render={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "expandRow": [Function],
            "getBatchActionProps": [Function],
            "getHeaderProps": [Function],
            "getRowProps": [Function],
            "getSelectionProps": [Function],
            "getTableProps": [Function],
            "headers": Array [
              Object {
                "header": "Field A",
                "key": "fieldA",
              },
              Object {
                "header": "Field B",
                "key": "fieldB",
              },
            ],
            "onInputChange": [Function],
            "radio": undefined,
            "rows": Array [
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "b:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:A",
                  },
                  Object {
                    "errors": null,
                    "id": "b:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:B",
                  },
                ],
                "id": "b",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "a:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:A",
                  },
                  Object {
                    "errors": null,
                    "id": "a:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:B",
                  },
                ],
                "id": "a",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "c:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:A",
                  },
                  Object {
                    "errors": null,
                    "id": "c:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:B",
                  },
                ],
                "id": "c",
                "isExpanded": false,
                "isSelected": false,
              },
            ],
            "selectAll": [Function],
            "selectRow": [Function],
            "selectedRows": Array [],
            "sortBy": [Function],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": <TableContainer
            title="DataTable with selection"
          >
            <Table
              short={false}
              shouldShowBorder={true}
              zebra={true}
            >
              <TableHead>
                <TableRow>
                  <TableSelectAll
                    ariaLabel="Select all rows"
                    checked={false}
                    id="data-table-6__select-all"
                    indeterminate={false}
                    name="select-all"
                    onSelect={[Function]}
                  />
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field A
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field B
                  </TableHeader>
                </TableRow>
              </TableHead>
              <TableBody>
                <TableRow>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-6__select-row-b"
                    name="select-row-b"
                    onSelect={[Function]}
                    radio={null}
                  />
                  <TableCell>
                    Field 2:A
                  </TableCell>
                  <TableCell>
                    Field 2:B
                  </TableCell>
                </TableRow>
                <TableRow>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-6__select-row-a"
                    name="select-row-a"
                    onSelect={[Function]}
                    radio={null}
                  />
                  <TableCell>
                    Field 1:A
                  </TableCell>
                  <TableCell>
                    Field 1:B
                  </TableCell>
                </TableRow>
                <TableRow>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-6__select-row-c"
                    name="select-row-c"
                    onSelect={[Function]}
                    radio={null}
                  />
                  <TableCell>
                    Field 3:A
                  </TableCell>
                  <TableCell>
                    Field 3:B
                  </TableCell>
                </TableRow>
              </TableBody>
            </Table>
          </TableContainer>,
        },
      ],
    }
  }
  rows={
    Array [
      Object {
        "fieldA": "Field 2:A",
        "fieldB": "Field 2:B",
        "id": "b",
      },
      Object {
        "fieldA": "Field 1:A",
        "fieldB": "Field 1:B",
        "id": "a",
      },
      Object {
        "fieldA": "Field 3:A",
        "fieldB": "Field 3:B",
        "id": "c",
      },
    ]
  }
  short={false}
  shouldShowBorder={true}
  sortRow={[Function]}
  translateWithId={[Function]}
>
  <TableContainer
    title="DataTable with selection"
  >
    <div
      className="bx--data-table-v2-container"
    >
      <h4
        className="bx--data-table-v2-header"
      >
        DataTable with selection
      </h4>
      <Table
        short={false}
        shouldShowBorder={true}
        zebra={true}
      >
        <table
          className="bx--data-table-v2 bx--data-table-v2--zebra"
        >
          <TableHead>
            <thead>
              <TableRow>
                <tr>
                  <TableSelectAll
                    ariaLabel="Select all rows"
                    checked={false}
                    id="data-table-6__select-all"
                    indeterminate={false}
                    name="select-all"
                    onSelect={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <ForwardRef(InlineCheckbox)
                        ariaLabel="Select all rows"
                        checked={false}
                        id="data-table-6__select-all"
                        indeterminate={false}
                        name="select-all"
                        onClick={[Function]}
                      >
                        <InlineCheckbox
                          ariaLabel="Select all rows"
                          checked={false}
                          id="data-table-6__select-all"
                          indeterminate={false}
                          innerRef={null}
                          name="select-all"
                          onChange={[Function]}
                          onClick={[Function]}
                        >
                          <input
                            checked={false}
                            className="bx--checkbox"
                            id="data-table-6__select-all"
                            name="select-all"
                            onChange={[Function]}
                            onClick={[Function]}
                            type="checkbox"
                          />
                          <label
                            aria-label="Select all rows"
                            className="bx--checkbox-label"
                            htmlFor="data-table-6__select-all"
                          />
                        </InlineCheckbox>
                      </ForwardRef(InlineCheckbox)>
                    </th>
                  </TableSelectAll>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldA"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      aria-sort="none"
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field A
                        </span>
                        <CaretUpGlyph
                          aria-label="Sort rows by this header in ascending order"
                          className="bx--table-sort-v2__icon"
                          height={4}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 8 4"
                          width={8}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-label="Sort rows by this header in ascending order"
                            className="bx--table-sort-v2__icon"
                            focusable="false"
                            height={4}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            style={
                              Object {
                                "willChange": "transform",
                              }
                            }
                            viewBox="0 0 8 4"
                            width={8}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 4l4-4 4 4z"
                            />
                          </svg>
                        </CaretUpGlyph>
                      </button>
                    </th>
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldB"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      aria-sort="none"
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field B
                        </span>
                        <CaretUpGlyph
                          aria-label="Sort rows by this header in ascending order"
                          className="bx--table-sort-v2__icon"
                          height={4}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 8 4"
                          width={8}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-label="Sort rows by this header in ascending order"
                            className="bx--table-sort-v2__icon"
                            focusable="false"
                            height={4}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            style={
                              Object {
                                "willChange": "transform",
                              }
                            }
                            viewBox="0 0 8 4"
                            width={8}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 4l4-4 4 4z"
                            />
                          </svg>
                        </CaretUpGlyph>
                      </button>
                    </th>
                  </TableHeader>
                </tr>
              </TableRow>
            </thead>
          </TableHead>
          <TableBody>
            <tbody>
              <TableRow
                key="b"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-6__select-row-b"
                    name="select-row-b"
                    onSelect={[Function]}
                    radio={null}
                  >
                    <td>
                      <ForwardRef(InlineCheckbox)
                        ariaLabel="Select row"
                        checked={false}
                        id="data-table-6__select-row-b"
                        name="select-row-b"
                        onClick={[Function]}
                      >
                        <InlineCheckbox
                          ariaLabel="Select row"
                          checked={false}
                          id="data-table-6__select-row-b"
                          innerRef={null}
                          name="select-row-b"
                          onChange={[Function]}
                          onClick={[Function]}
                        >
                          <input
                            checked={false}
                            className="bx--checkbox"
                            id="data-table-6__select-row-b"
                            name="select-row-b"
                            onChange={[Function]}
                            onClick={[Function]}
                            type="checkbox"
                          />
                          <label
                            aria-label="Select row"
                            className="bx--checkbox-label"
                            htmlFor="data-table-6__select-row-b"
                          />
                        </InlineCheckbox>
                      </ForwardRef(InlineCheckbox)>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="b:fieldA"
                  >
                    <td>
                      Field 2:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="b:fieldB"
                  >
                    <td>
                      Field 2:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="a"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-6__select-row-a"
                    name="select-row-a"
                    onSelect={[Function]}
                    radio={null}
                  >
                    <td>
                      <ForwardRef(InlineCheckbox)
                        ariaLabel="Select row"
                        checked={false}
                        id="data-table-6__select-row-a"
                        name="select-row-a"
                        onClick={[Function]}
                      >
                        <InlineCheckbox
                          ariaLabel="Select row"
                          checked={false}
                          id="data-table-6__select-row-a"
                          innerRef={null}
                          name="select-row-a"
                          onChange={[Function]}
                          onClick={[Function]}
                        >
                          <input
                            checked={false}
                            className="bx--checkbox"
                            id="data-table-6__select-row-a"
                            name="select-row-a"
                            onChange={[Function]}
                            onClick={[Function]}
                            type="checkbox"
                          />
                          <label
                            aria-label="Select row"
                            className="bx--checkbox-label"
                            htmlFor="data-table-6__select-row-a"
                          />
                        </InlineCheckbox>
                      </ForwardRef(InlineCheckbox)>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="a:fieldA"
                  >
                    <td>
                      Field 1:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="a:fieldB"
                  >
                    <td>
                      Field 1:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="c"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-6__select-row-c"
                    name="select-row-c"
                    onSelect={[Function]}
                    radio={null}
                  >
                    <td>
                      <ForwardRef(InlineCheckbox)
                        ariaLabel="Select row"
                        checked={false}
                        id="data-table-6__select-row-c"
                        name="select-row-c"
                        onClick={[Function]}
                      >
                        <InlineCheckbox
                          ariaLabel="Select row"
                          checked={false}
                          id="data-table-6__select-row-c"
                          innerRef={null}
                          name="select-row-c"
                          onChange={[Function]}
                          onClick={[Function]}
                        >
                          <input
                            checked={false}
                            className="bx--checkbox"
                            id="data-table-6__select-row-c"
                            name="select-row-c"
                            onChange={[Function]}
                            onClick={[Function]}
                            type="checkbox"
                          />
                          <label
                            aria-label="Select row"
                            className="bx--checkbox-label"
                            htmlFor="data-table-6__select-row-c"
                          />
                        </InlineCheckbox>
                      </ForwardRef(InlineCheckbox)>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="c:fieldA"
                  >
                    <td>
                      Field 3:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="c:fieldB"
                  >
                    <td>
                      Field 3:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
            </tbody>
          </TableBody>
        </table>
      </Table>
    </div>
  </TableContainer>
</DataTable>
`;

exports[`DataTable should render 1`] = `
<DataTable
  filterRows={[Function]}
  headers={
    Array [
      Object {
        "header": "Field A",
        "key": "fieldA",
      },
      Object {
        "header": "Field B",
        "key": "fieldB",
      },
    ]
  }
  locale="en"
  render={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "expandRow": [Function],
            "getBatchActionProps": [Function],
            "getHeaderProps": [Function],
            "getRowProps": [Function],
            "getSelectionProps": [Function],
            "getTableProps": [Function],
            "headers": Array [
              Object {
                "header": "Field A",
                "key": "fieldA",
              },
              Object {
                "header": "Field B",
                "key": "fieldB",
              },
            ],
            "onInputChange": [Function],
            "radio": undefined,
            "rows": Array [
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "b:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:A",
                  },
                  Object {
                    "errors": null,
                    "id": "b:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:B",
                  },
                ],
                "id": "b",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "a:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:A",
                  },
                  Object {
                    "errors": null,
                    "id": "a:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:B",
                  },
                ],
                "id": "a",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "c:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:A",
                  },
                  Object {
                    "errors": null,
                    "id": "c:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:B",
                  },
                ],
                "id": "c",
                "isExpanded": false,
                "isSelected": false,
              },
            ],
            "selectAll": [Function],
            "selectRow": [Function],
            "selectedRows": Array [],
            "sortBy": [Function],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": <TableContainer
            title="DataTable with toolbar"
          >
            <TableToolbar>
              <TableToolbarSearch
                id="custom-id"
                onChange={[Function]}
                translateWithId={[Function]}
              />
              <TableToolbarContent>
                <TableToolbarAction
                  icon={
                    Object {
                      "height": "16",
                      "id": "icon--download",
                      "name": "icon--download",
                      "styles": "",
                      "svgData": Object {
                        "circles": "",
                        "ellipses": "",
                        "paths": Array [
                          Object {
                            "d": "M7.5 11l4.1-4.4.7.7L7 13 1.6 7.3l.7-.7L6.5 11V0h1v11zm5.5 4v-2h1v2c0 .6-.4 1-1 1H1c-.6 0-1-.4-1-1v-2h1v2h12z",
                          },
                        ],
                        "polygons": "",
                        "polylines": "",
                        "rects": "",
                      },
                      "tags": "icon--download",
                      "viewBox": "0 0 14 16",
                      "width": "14",
                    }
                  }
                  iconDescription="Download"
                  onClick={[MockFunction]}
                />
                <TableToolbarAction
                  icon={
                    Object {
                      "height": "16",
                      "id": "icon--edit",
                      "name": "icon--edit",
                      "styles": "",
                      "svgData": Object {
                        "circles": "",
                        "ellipses": "",
                        "paths": Array [
                          Object {
                            "d": "M7.926 3.38L1.002 9.72V12h2.304l6.926-6.316L7.926 3.38zm.738-.675l2.308 2.304 1.451-1.324-2.308-2.309-1.451 1.329zM.002 9.28L9.439.639a1 1 0 0 1 1.383.03l2.309 2.309a1 1 0 0 1-.034 1.446L3.694 13H.002V9.28zM0 16.013v-1h16v1z",
                            "fill-rule": "nonzero",
                          },
                        ],
                        "polygons": "",
                        "polylines": "",
                        "rects": "",
                      },
                      "tags": "icon--edit",
                      "viewBox": "0 0 16 16",
                      "width": "16",
                    }
                  }
                  iconDescription="Edit"
                  onClick={[MockFunction]}
                />
                <TableToolbarAction
                  icon={
                    Object {
                      "height": "16",
                      "id": "icon--settings",
                      "name": "icon--settings",
                      "styles": "",
                      "svgData": Object {
                        "circles": "",
                        "ellipses": "",
                        "paths": Array [
                          Object {
                            "d": "M7.5 10.5C8.9 10.5 10 9.4 10 8S8.9 5.5 7.5 5.5 5 6.6 5 8s1.2 2.5 2.5 2.5zm0 1C5.6 11.5 4 9.9 4 8s1.6-3.5 3.5-3.5S11 6.1 11 8s-1.5 3.5-3.5 3.5z",
                          },
                          Object {
                            "d": "M6.3 2.6l-.3.1c-.7.2-1.3.5-1.9 1l-.2.2-1.4-.8-1.3 1.8L2.4 6l-.1.2C2.1 6.8 2 7.4 2 8c0 .3 0 .7.1 1l.1.3-1.2 1L2.2 12l1.1-.6.3.3c.6.8 1.4 1.3 2.4 1.6l.3.1.2 1.6h2.1l.2-1.6.3-.1c.8-.2 1.6-.7 2.2-1.3l.3-.2 1.1.6 1.2-1.7-1.1-1 .1-.3c.1-.5.1-1 .1-1.4 0-.5-.1-1.1-.2-1.6l-.1-.3 1.2-1-1.2-1.7-1.4.6-.3-.2c-.6-.5-1.3-.9-2-1.1l-.2-.1L8.6 1H6.5l-.2 1.6zM5.5.9c0-.5.5-.9 1-.9h2.1c.5 0 .9.4 1 .9l.1 1c.6.2 1.2.5 1.8 1l.7-.4c.4-.2 1-.1 1.3.3l1.2 1.7c.3.4.2 1-.1 1.3l-.7.6c.1.5.1 1.1.1 1.6 0 .4 0 .8-.1 1.3l.6.6c.4.3.4.9.1 1.3l-1.2 1.7c-.3.4-.8.5-1.3.3l-.4-.2c-.6.5-1.3.9-2 1.2l-.1 1c-.1.5-.5.9-1 .9H6.5c-.5 0-.9-.4-1-.9l-.1-1c-.8-.3-1.6-.8-2.3-1.4l-.4.2c-.4.2-1 .1-1.3-.3L.2 11c-.3-.4-.2-1 .1-1.3l.8-.7c0-.4-.1-.7-.1-1 0-.6.1-1.2.2-1.8l-.6-.6C.2 5.3.1 4.7.4 4.3l1.2-1.7c.3-.5.9-.6 1.3-.4l.9.5c.5-.3 1-.6 1.6-.8l.1-1z",
                          },
                        ],
                        "polygons": "",
                        "polylines": "",
                        "rects": "",
                      },
                      "tags": "icon--settings",
                      "viewBox": "0 0 15 16",
                      "width": "15",
                    }
                  }
                  iconDescription="Settings"
                  onClick={[MockFunction]}
                />
                <ForwardRef
                  disabled={false}
                  iconDescription="Provide icon description if icon is used"
                  kind="primary"
                  onClick={[MockFunction]}
                  small={true}
                  tabIndex={0}
                  type="button"
                >
                  Add new
                </ForwardRef>
              </TableToolbarContent>
            </TableToolbar>
            <Table
              short={false}
              shouldShowBorder={true}
              zebra={true}
            >
              <TableHead>
                <TableRow>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field A
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field B
                  </TableHeader>
                </TableRow>
              </TableHead>
              <TableBody>
                <TableRow>
                  <TableCell>
                    Field 2:A
                  </TableCell>
                  <TableCell>
                    Field 2:B
                  </TableCell>
                </TableRow>
                <TableRow>
                  <TableCell>
                    Field 1:A
                  </TableCell>
                  <TableCell>
                    Field 1:B
                  </TableCell>
                </TableRow>
                <TableRow>
                  <TableCell>
                    Field 3:A
                  </TableCell>
                  <TableCell>
                    Field 3:B
                  </TableCell>
                </TableRow>
              </TableBody>
            </Table>
          </TableContainer>,
        },
      ],
    }
  }
  rows={
    Array [
      Object {
        "fieldA": "Field 2:A",
        "fieldB": "Field 2:B",
        "id": "b",
      },
      Object {
        "fieldA": "Field 1:A",
        "fieldB": "Field 1:B",
        "id": "a",
      },
      Object {
        "fieldA": "Field 3:A",
        "fieldB": "Field 3:B",
        "id": "c",
      },
    ]
  }
  short={false}
  shouldShowBorder={true}
  sortRow={[Function]}
  translateWithId={[Function]}
>
  <TableContainer
    title="DataTable with toolbar"
  >
    <div
      className="bx--data-table-v2-container"
    >
      <h4
        className="bx--data-table-v2-header"
      >
        DataTable with toolbar
      </h4>
      <TableToolbar>
        <section
          className="bx--table-toolbar"
        >
          <TableToolbarSearch
            id="custom-id"
            onChange={[Function]}
            translateWithId={[Function]}
          >
            <div
              className="bx--toolbar-search-container"
            >
              <Search
                id="custom-id"
                labelText="Filter table"
                light={true}
                onChange={[Function]}
                placeHolderText="Search"
                small={true}
                type="text"
              >
                <div
                  aria-labelledby="custom-id-label"
                  className="bx--search bx--search--sm bx--search--light"
                  role="search"
                >
                  <Search16
                    aria-label="Filter table"
                    className="bx--search-magnifier"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-label="Filter table"
                      className="bx--search-magnifier"
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15 14.3L10.7 10c1.9-2.3 1.6-5.8-.7-7.7S4.2.7 2.3 3 .7 8.8 3 10.7c2 1.7 5 1.7 7 0l4.3 4.3.7-.7zM2 6.5C2 4 4 2 6.5 2S11 4 11 6.5 9 11 6.5 11 2 9 2 6.5z"
                      />
                    </svg>
                  </Search16>
                  <label
                    className="bx--label"
                    htmlFor="custom-id"
                    id="custom-id-label"
                  >
                    Filter table
                  </label>
                  <input
                    className="bx--search-input"
                    id="custom-id"
                    onChange={[Function]}
                    placeholder="Search"
                    type="text"
                  />
                  <button
                    className="bx--search-close bx--search-close--hidden"
                    onClick={[Function]}
                    type="button"
                  >
                    <Close16
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <svg
                        aria-hidden={true}
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        style={
                          Object {
                            "willChange": "transform",
                          }
                        }
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 4.7l-.7-.7L8 7.3 4.7 4l-.7.7L7.3 8 4 11.3l.7.7L8 8.7l3.3 3.3.7-.7L8.7 8z"
                        />
                      </svg>
                    </Close16>
                  </button>
                </div>
              </Search>
            </div>
          </TableToolbarSearch>
          <TableToolbarContent>
            <div
              className="bx--toolbar-content"
            >
              <TableToolbarAction
                icon={
                  Object {
                    "height": "16",
                    "id": "icon--download",
                    "name": "icon--download",
                    "styles": "",
                    "svgData": Object {
                      "circles": "",
                      "ellipses": "",
                      "paths": Array [
                        Object {
                          "d": "M7.5 11l4.1-4.4.7.7L7 13 1.6 7.3l.7-.7L6.5 11V0h1v11zm5.5 4v-2h1v2c0 .6-.4 1-1 1H1c-.6 0-1-.4-1-1v-2h1v2h12z",
                        },
                      ],
                      "polygons": "",
                      "polylines": "",
                      "rects": "",
                    },
                    "tags": "icon--download",
                    "viewBox": "0 0 14 16",
                    "width": "14",
                  }
                }
                iconDescription="Download"
                onClick={[MockFunction]}
              >
                <button
                  className="bx--toolbar-action"
                  onClick={[MockFunction]}
                  title="Download"
                />
              </TableToolbarAction>
              <TableToolbarAction
                icon={
                  Object {
                    "height": "16",
                    "id": "icon--edit",
                    "name": "icon--edit",
                    "styles": "",
                    "svgData": Object {
                      "circles": "",
                      "ellipses": "",
                      "paths": Array [
                        Object {
                          "d": "M7.926 3.38L1.002 9.72V12h2.304l6.926-6.316L7.926 3.38zm.738-.675l2.308 2.304 1.451-1.324-2.308-2.309-1.451 1.329zM.002 9.28L9.439.639a1 1 0 0 1 1.383.03l2.309 2.309a1 1 0 0 1-.034 1.446L3.694 13H.002V9.28zM0 16.013v-1h16v1z",
                          "fill-rule": "nonzero",
                        },
                      ],
                      "polygons": "",
                      "polylines": "",
                      "rects": "",
                    },
                    "tags": "icon--edit",
                    "viewBox": "0 0 16 16",
                    "width": "16",
                  }
                }
                iconDescription="Edit"
                onClick={[MockFunction]}
              >
                <button
                  className="bx--toolbar-action"
                  onClick={[MockFunction]}
                  title="Edit"
                />
              </TableToolbarAction>
              <TableToolbarAction
                icon={
                  Object {
                    "height": "16",
                    "id": "icon--settings",
                    "name": "icon--settings",
                    "styles": "",
                    "svgData": Object {
                      "circles": "",
                      "ellipses": "",
                      "paths": Array [
                        Object {
                          "d": "M7.5 10.5C8.9 10.5 10 9.4 10 8S8.9 5.5 7.5 5.5 5 6.6 5 8s1.2 2.5 2.5 2.5zm0 1C5.6 11.5 4 9.9 4 8s1.6-3.5 3.5-3.5S11 6.1 11 8s-1.5 3.5-3.5 3.5z",
                        },
                        Object {
                          "d": "M6.3 2.6l-.3.1c-.7.2-1.3.5-1.9 1l-.2.2-1.4-.8-1.3 1.8L2.4 6l-.1.2C2.1 6.8 2 7.4 2 8c0 .3 0 .7.1 1l.1.3-1.2 1L2.2 12l1.1-.6.3.3c.6.8 1.4 1.3 2.4 1.6l.3.1.2 1.6h2.1l.2-1.6.3-.1c.8-.2 1.6-.7 2.2-1.3l.3-.2 1.1.6 1.2-1.7-1.1-1 .1-.3c.1-.5.1-1 .1-1.4 0-.5-.1-1.1-.2-1.6l-.1-.3 1.2-1-1.2-1.7-1.4.6-.3-.2c-.6-.5-1.3-.9-2-1.1l-.2-.1L8.6 1H6.5l-.2 1.6zM5.5.9c0-.5.5-.9 1-.9h2.1c.5 0 .9.4 1 .9l.1 1c.6.2 1.2.5 1.8 1l.7-.4c.4-.2 1-.1 1.3.3l1.2 1.7c.3.4.2 1-.1 1.3l-.7.6c.1.5.1 1.1.1 1.6 0 .4 0 .8-.1 1.3l.6.6c.4.3.4.9.1 1.3l-1.2 1.7c-.3.4-.8.5-1.3.3l-.4-.2c-.6.5-1.3.9-2 1.2l-.1 1c-.1.5-.5.9-1 .9H6.5c-.5 0-.9-.4-1-.9l-.1-1c-.8-.3-1.6-.8-2.3-1.4l-.4.2c-.4.2-1 .1-1.3-.3L.2 11c-.3-.4-.2-1 .1-1.3l.8-.7c0-.4-.1-.7-.1-1 0-.6.1-1.2.2-1.8l-.6-.6C.2 5.3.1 4.7.4 4.3l1.2-1.7c.3-.5.9-.6 1.3-.4l.9.5c.5-.3 1-.6 1.6-.8l.1-1z",
                        },
                      ],
                      "polygons": "",
                      "polylines": "",
                      "rects": "",
                    },
                    "tags": "icon--settings",
                    "viewBox": "0 0 15 16",
                    "width": "15",
                  }
                }
                iconDescription="Settings"
                onClick={[MockFunction]}
              >
                <button
                  className="bx--toolbar-action"
                  onClick={[MockFunction]}
                  title="Settings"
                />
              </TableToolbarAction>
              <ForwardRef
                disabled={false}
                iconDescription="Provide icon description if icon is used"
                kind="primary"
                onClick={[MockFunction]}
                small={true}
                tabIndex={0}
                type="button"
              >
                <button
                  className="bx--btn bx--btn--sm bx--btn--primary"
                  disabled={false}
                  onClick={[MockFunction]}
                  tabIndex={0}
                  type="button"
                >
                  Add new
                </button>
              </ForwardRef>
            </div>
          </TableToolbarContent>
        </section>
      </TableToolbar>
      <Table
        short={false}
        shouldShowBorder={true}
        zebra={true}
      >
        <table
          className="bx--data-table-v2 bx--data-table-v2--zebra"
        >
          <TableHead>
            <thead>
              <TableRow>
                <tr>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldA"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      aria-sort="none"
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field A
                        </span>
                        <CaretUpGlyph
                          aria-label="Sort rows by this header in ascending order"
                          className="bx--table-sort-v2__icon"
                          height={4}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 8 4"
                          width={8}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-label="Sort rows by this header in ascending order"
                            className="bx--table-sort-v2__icon"
                            focusable="false"
                            height={4}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            style={
                              Object {
                                "willChange": "transform",
                              }
                            }
                            viewBox="0 0 8 4"
                            width={8}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 4l4-4 4 4z"
                            />
                          </svg>
                        </CaretUpGlyph>
                      </button>
                    </th>
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldB"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      aria-sort="none"
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field B
                        </span>
                        <CaretUpGlyph
                          aria-label="Sort rows by this header in ascending order"
                          className="bx--table-sort-v2__icon"
                          height={4}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 8 4"
                          width={8}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <svg
                            aria-label="Sort rows by this header in ascending order"
                            className="bx--table-sort-v2__icon"
                            focusable="false"
                            height={4}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            style={
                              Object {
                                "willChange": "transform",
                              }
                            }
                            viewBox="0 0 8 4"
                            width={8}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 4l4-4 4 4z"
                            />
                          </svg>
                        </CaretUpGlyph>
                      </button>
                    </th>
                  </TableHeader>
                </tr>
              </TableRow>
            </thead>
          </TableHead>
          <TableBody>
            <tbody>
              <TableRow
                key="b"
              >
                <tr>
                  <TableCell
                    key="b:fieldA"
                  >
                    <td>
                      Field 2:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="b:fieldB"
                  >
                    <td>
                      Field 2:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="a"
              >
                <tr>
                  <TableCell
                    key="a:fieldA"
                  >
                    <td>
                      Field 1:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="a:fieldB"
                  >
                    <td>
                      Field 1:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="c"
              >
                <tr>
                  <TableCell
                    key="c:fieldA"
                  >
                    <td>
                      Field 3:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="c:fieldB"
                  >
                    <td>
                      Field 3:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
            </tbody>
          </TableBody>
        </table>
      </Table>
    </div>
  </TableContainer>
</DataTable>
`;
